# bind9-webadmin

./: Cargo.toml  README.md  config.toml
src/: auth.rs  bind9.rs  config.rs  i18n.rs  main.rs  server.rs
templates/: base.html  config.html  index.html  login.html
templates/users/: form.html  list.html
templates/zones/: edit.html  list.html
