[package]
name = "bind9-webadmin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.10", features = ["cookie"] }
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bcrypt = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
lazy_static = "1.4"
chrono = "0.4"
